--- a/templates/print.html
+++ b/templates/print.html
@@ -85,18 +85,19 @@
                     <table id="jobs-table">
                         <thead>
                         <tr>
-                            <th>Job ID</th>
-                            <th>File</th>
+                            <th>Filename</th>
                             <th>Printer</th>
-                            <th>Status</th>
+                            <th>Copies</th>
+                            <th>Color</th>
                             <th>Created</th>
+                            <th>Status</th>
                             <th>Progress</th>
                             <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody id="jobs-tbody">
                         <tr>
-                            <td colspan="7" class="empty-state">
+                            <td colspan="8" class="empty-state">
                                 <i class="fas fa-print"></i>
                                 <h3>No Print Jobs</h3>
                                 <p>Start printing to see jobs here</p>
