--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/components.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
-<body
+<body>
 <div class="app-container">
     <!-- Header -->
     <header class="header">
