--- a/templates/scan.html
+++ b/templates/scan.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/components.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/static/images/icons/favicon.ico">
 </head>
 <body>
 <div class="app-container">
